建立数据库

--- a/ginblog/config/config.ini
+++ b/ginblog/config/config.ini
@@ -3,8 +3,8 @@ AppMode = debug
 HttpPort = :3000
 
 [database]
-Db = test
-DbHost = localhost
+Db = ginblog
+DbHost = 127.0.0.1
 DbPort = 3306
 DbUser = nine
 DbPassWord = 123qwe
