--- a/ginblog/config/config.ini
+++ b/ginblog/config/config.ini
@@ -3,9 +3,9 @@ AppMode = debug
 HttpPort = :3000
 
 [database]
-Db = ginblog
+Db = test
 DbHost = 127.0.0.1
 DbPort = 3306
 DbUser = nine
 DbPassWord = 123qwe
-DbName = ginblog
+DbName = test
